--- a/papers.html
+++ b/papers.html
@@ -274,9 +274,29 @@ const papersData = {
     }
   },
   sem3:{
-    "2022-23":{
+    bsc:{
+    "2023":{
+      "Mathematics Analytical Geometry":"pypBSC3/ba-bsc-3-sem-maths-analytical-geo.-2023.pdf",
+      "Mathemaics Group Theory":"pypBSC3/ba-bsc-3-sem-math-2023.pdf",
+      "Heat and Thermodynamics":"pypBSC3/bsc-3-sem-thermo-2023.pdf",
+      "Physical chemistry":"pypBSC3/bsc-3-sem-chem-2023.pdf",
+      "Physics Geomatrical optics":"",
+      "Macro Economics and public finance":"pypBSC3/ba-bsc-3-sem-eco-macro-eco-and-pub-1-2023.pdf",
+      "Economics Money banking and international trade":"pypBSC3/ba-bsc-3-sem-ec-money-banking-a-in-2023.pdf"
       
+    },
+    ba:{
+      "Mathematics Analytical Geometry":"pypBSC3/ba-bsc-3-sem-maths-analytical-geo.-2023.pdf",
+      "Mathemaics Group Theory":"pypBSC3/ba-bsc-3-sem-math-2023.pdf",
+      "Macro Economics and public finance":"pypBA3/ba-bsc-3-sem-economics-pub.finance-2023.pdf",
+      "Economics Money banking and international trade":"pypBA3/ba-bsc-3-sem-economics-2023.pdf",
+      "Hindi literature and hindi nibandh":"pypBA3/ba-3-sem-hindi-2023.pdf",
+      "Sanskrit Literature Gadyakavya Evam Bhartiya Sanskrit":"pypBA3/ba-3-sem-sanskrit-2023.pdf",
+      "Sanskrit Literature Sanskrit Padyakavya Evam Vyakaren":"pypBA3/ba-3-sem-sanskrit--2023.pdf",
+      "Health Education":"pypBA3/ba-3-sem-pe-health-education-2022.pdf",
+      "Management in Physical Education":"pypBA3/ba-3-sem-phy.education-2022.pdf"
     }
+  }
   }
 };
 
